diss: links to jstp and isipta11 sections in sec 3.1

--- a/jstp.tex
+++ b/jstp.tex
@@ -803,7 +803,8 @@ significantly larger than in the former, leading to more cautious inference as d
 \end{figure}
 
 
-\subsection{Illustration of the Generalised \ymodel} \label{sec:illu} 
+\subsection{Illustration of the Generalised \ymodel}
+\label{sec:illu} 
 
 The theoretical considerations in Section~\ref{sec:4-gw-071216} are now
 illustrated by means of Examples~\ref{ex:ymodel-nv} -- \ref{ex:jstp-6},
