diss: short captions for figures, repairing \Pl

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -244,7 +244,7 @@ linkline/.style={
 \draw[linkline] (buy) -- (2.5,0.3);
 \draw[linkline] (sell) -- (8,0.3);
 \end{tikzpicture}
-\caption{\label{fig:pricesforgambles}%
+\caption[Illustration of \underline{E}\ and $\Eu$ as supremum buying and infimum selling prices]{\label{fig:pricesforgambles}%
 Illustration of \underline{E}\ and $\Eu$ as supremum buying and infimum selling prices for a gamble $X$ on a linear utility scale.}
 %$\El$ %strange errors occur
 \end{figure}
