--- a/isipta11.tex
+++ b/isipta11.tex
@@ -186,7 +186,8 @@ are marked with a circle.
 \input{fig/spotbanana.tex}
 %
 \end{tikzpicture}
-\caption{Posterior parameter sets $\PN$ for rectangular $\PZ$. Left: \emph{spotlight} shape; right: \emph{banana} shape.}
+\caption[Posterior parameter sets $\PN$ for rectangular $\PZ$.]%
+{Posterior parameter sets $\PN$ for rectangular $\PZ$. Left: \emph{spotlight} shape; right: \emph{banana} shape.}
 \label{fig:spot-banana}
 \end{figure}
 %\end{verbatim}
@@ -250,8 +251,8 @@ is calculated with $\nzl$. %attained for $\nzl$.
 \end{tikzpicture}
 %\caption{***error***}
 %\caption{$\Pl$ and $\Pu$ for models in Sections~*** }% \ref{sec:ibbm-walley} and \ref{sec:othershapes}.}
-\caption{%$\Pl$ and %$\Pu$
-Lower and upper predictive probability of success
+\caption{\underline{P}\ and $\Pu$
+%Lower and upper predictive probability of success
 for models in Sections~\ref{sec:ibbm-walley} and \ref{sec:othershapes}.}
 \label{fig:priorset-generic}
 \end{figure}
@@ -337,7 +338,7 @@ The resulting shape of $\PZ$ is as in Figure~\ref{fig:anteater-ex1} (left) and c
 \input{fig/anteater1a.tex}
 %
 \end{tikzpicture}
-\caption{ $\PZ$ and $\PN$ for the \emph{anteater} shape.}
+\caption{$\PZ$ and $\PN$ for the \emph{anteater} shape.}
 \label{fig:anteater-ex1}
 \end{figure}
 %
@@ -445,7 +446,8 @@ calculated with $\nzl$ and the other with $\nzu$.
 \draw (A) -- node[sloped,below] {\small sl.~2} (Fl) -- node[sloped,below,pos=0.45] {\small sl.~2} (El) -- node[sloped,above] {\small sl.~1} (C);
 \end{tikzpicture}
 \caption{%$\Pl$ and $\Pu$
-Lower and upper predictive probability of success
+\underline{P}\ and $\Pu$
+%Lower and upper predictive probability of success
 for the \emph{anteater} shape if $n < n^h$.}
 \label{fig:anteater-nsmall}
 \end{figure}
@@ -462,7 +464,8 @@ for the \emph{anteater} shape if $n < n^h$.}
 %\draw (0,0) rectangle (400, 220);
 %
 \end{tikzpicture}
-\caption{Posterior parameter sets $\PN$ for \emph{anteater} prior sets $\PZ$.
+\caption[Posterior parameter sets $\PN$ for \emph{anteater} prior sets $\PZ$.]%
+{Posterior parameter sets $\PN$ for \emph{anteater} prior sets $\PZ$.
 Left: the transition point where %$\ynl$
 the lower contour of the posterior parameter set 
 is attained for all $\nn$, right: the \emph{banana} shape.}
@@ -848,7 +851,8 @@ $s$, which is attractive from the perspective of objective inference.
 \draw (A) -- node[sloped,below] {\small sl.~2} (El) -- node[sloped,below,pos=0.4] {\small sl.~2} (Fl) -- node[sloped,above] {\small sl.~1} (C);
 \end{tikzpicture}
 \caption{%$\Pl$ and $\Pu$
-Lower and upper predictive probability of success
+\underline{P}\ and $\Pu$
+%Lower and upper predictive probability of success
 for the weighted inference model.}
 \label{fig:weighted-generic}
 \end{figure}
