diss: jstp intro section added

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -12,7 +12,7 @@
   year = 2007,
   title = {Linear Regression Analysis under Sets of Conjugate Priors},
   booktitle = {ISIPTA'07, Proceedings of the Fifth International Symposium on
-              Imprecise Probabilities: Theories and Applications},
+              Imprecise Probabilities and their Applications},
   pages = {445--455},
   publisher = {SIPTA},
   url = {http://www.sipta.org/isipta07/proceedings/041.html},
