--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -655,6 +655,25 @@
     Year = {2002}}
 
 
+@ARTICLE{1961:ellsberg,
+  author = {Ellsberg, D.},
+  title = {Risk, ambiguity, and the {S}avage axioms},
+  journal = {Quarterly Journal of Economics},
+  year = {1961},
+  volume = {75},
+  pages = {643--669}
+}
+
+@article{2007:troffaes,
+    Author = {Troffaes, M.},
+    Journal = {International Journal of Approximate Reasoning},
+    Pages = {17--29},
+    Title = {Decision making under uncertainty using imprecise probabilities},
+    Volume = 45,
+    Year = 2007}
+
+
+
 
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
