--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -364,10 +364,28 @@ Year = {1999}
 
 @inproceedings{2009:hampel:knowledge,
     Author = {F. Hampel},
-    Booktitle = {ISIPTA '09: Proc.\ of the Sixth International Symposium on Imprecise Probabilities: Theories and Applications},
+    Booktitle = {ISIPTA '09: Proceedings of the Sixth International Symposium on Imprecise Probabilities: Theories and Applications},
     Editor = {T. Augustin and F.P.A. Coolen and S. Moral and M.C.M. Troffaes},
     pages = {219--227},
     Title = {How can we get new knowledge?},
     Year = {2009}}
+
+@InProceedings{2007:held-isipta07,
+    author = {Herrman Held},
+     title = {Quantile-Filtered {B}ayesian Learning for the Correlation Class},
+ booktitle = {ISIPTA '07: Proceedings of the Fifth International Symposium on Imprecise Probabilities and Their Applications},
+     pages = {223--232},
+      year = {2007},
+    editor = {Gert de Cooman and Ji\v{r}ina Vejnarov\'{a} and Marco Zaffalon},
+}
+
+@article {2004:augustin:coolen,
+    AUTHOR = {Augustin, T. and Coolen, F. P. A.},
+     TITLE = {Nonparametric predictive inference and interval probability},
+   JOURNAL = {Journal of Statistical Planning and Inference},
+    VOLUME = {124},
+      YEAR = {2004},
+     PAGES = {251--272},
+}
 
 
