--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -176,6 +176,7 @@ are then explained in relation to the other formulations,
 and the generalised Bayesian inference procedure as used in Section~\ref{sec:imprecise-alpha} is justified formally.
 
 \subsubsection{Lower Previsions}
+\label{sec:lowerprevisions}
 
 As mentioned in Section~\ref{sec:ip-general}, the basic entities in the theory by \textcite{1991:walley}
 are lower and upper \emph{previsions}.
@@ -763,6 +764,9 @@ while highly imprecise (or even vacuous) models are used in the situation of sca
 This multidimensionality of uncertainty is most often accounted for
 by distinguishing two specific dimensions,
 commonly denoted by \emph{risk} and \emph{ambiguity}. ***citation??***
+
+***\parencite{1961:ellsberg} here, some words on decision making? cite again \parencite{2005:hsu-bhatt}??***
+
 \begin{itemize}
 \item Risk is the uncertainty involved in ideal lotteries,
 i.e., when the stochastic mechanism driving the phenomenon under uncertainty
