--- a/intro.tex
+++ b/intro.tex
@@ -12,7 +12,12 @@
 
 \section{Overview / Outline***}
 
+%\subsection{Outline}
+
 ***structure, sources, which papers where***
+
+
+\subsection{Sources}
 
 Sec.~\ref{sec:stat-inference}: parts of \textcite[\S\S 1.1, 1.2, 1.5]{itip-statinf}
 
@@ -64,6 +69,7 @@ while Section~\ref{sec:weightedinf} was devised and written primarily by Frank C
 Here, it was possible to add a few explanatory paragraphs that could not appear in the original publication. 
 Thomas Augustin contributed substantially to all parts of the manuscript,
 especially in the introductory and concluding sections.***
+
 
 \section{Notation}
 \label{sec:notation}
