diss: minor stuff in jstp

--- a/jstp.tex
+++ b/jstp.tex
@@ -385,7 +385,7 @@ the practically important case of linear regression
 models, modelling the (linear) influence of certain variables (called covariates,
 confounders, regressors, stimulus or independent variables) on a
 certain outcome (also called response or dependent variable).%
-\footnote{See Chapter~\ref{cha:festschrift} (Appendix~1) for alternative models
+\footnote{See ***Chapter~\ref{cha:festschrift} (Appendix~1)*** for alternative models
 that adhere to the regular conjugate framework of Section~\ref{sec:regularconjugates}.}
 \end{example}
 
@@ -1174,7 +1174,7 @@ argumentation to a certain Bayesian setting: we studied how far
 one can go \emph{if} one relies strictly on the generalised Bayes
 rule, transferring sets of priors to sets of posteriors element by
 element via Bayes rule. Alternative learning
-rules, including the approaches enumerated at Section~***paper intro*** %\ref{sec:intro},
+rules, including the approaches enumerated at Section~\ref{sec:jstp-intro} %***paper intro*** %\ref{sec:intro},
 could prove very important as, to use one of the referees'
 felicitous words, ``Bayesian methods cannot allow for surprise, the same is
 true for robustified or generalised Bayesian methods, although these
